<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFB"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saltar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/ic_Carousel"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintVertical_bias="0.3"
        app:autoPlay="true"
        app:autoPlayDelay="4000"
        app:bottomShadowAlpha="0.0"
        app:bottomShadowHeight="10dp"
        app:carouselBackground="@color/white"
        app:imageScaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showBottomShadow="true"
        app:showNavigationButtons="false"
        app:topShadowAlpha="0.0" />

    <TextView
        android:id="@+id/tv_TheFastest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_Carousel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/text_title"
        android:textAlignment="center"
        android:textColor="@color/Blue_Title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_GetEasy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/text_body"
        android:textAlignment="center"
        android:textColor="@color/Grey_body"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TheFastest"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/btnGetstarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/botton_color"
        android:paddingStart="20dp"
        android:text="@string/get_started"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_GetEasy"
        app:layout_constraintVertical_bias="0.4"/>



</androidx.constraintlayout.widget.ConstraintLayout>