<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RecuperarPasswordActivity">

    <ImageView
        android:id="@+id/iv_Candado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginEnd="300dp"
        android:background="#FFFFFF"
        android:src="@drawable/candado" />

    <TextView
        android:id="@+id/tv_Password_Recovery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Candado"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="15dp"
        android:text="@string/passsword_recovery"
        android:textColor="@color/Blue_Title"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_EnterYou_R"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Password_Recovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginStart="15dp"
        android:text="@string/enter_your_registered_email_below_to_receive_password_instructions"
        android:textColor="@color/Grey_body"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_PasswordInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_EnterYou_R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginStart="15dp"
        android:text="@string/password_instructions"
        android:textColor="@color/Grey_body"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PasswordInstructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_imput"
        android:hint="email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:height="50dp"
        android:padding="15dp" />

    <Button
        android:id="@+id/btn_Send_me_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/botton_color"
        android:text="@string/send_me_email"
        android:padding="17dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>