<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFB"
    tools:context=".InicioSesionActivity">

    <ImageView
        android:id="@+id/iv_Atras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Hi_There"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:text="@string/hi_there"
        android:textColor="@color/Blue_Title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Atras" />

    <TextView
        android:id="@+id/tv_Welcome_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:minHeight="5dp"
        android:text="@string/text_body2"
        android:textColor="@color/Grey_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Hi_There"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_InputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Welcome_back"
        app:layout_constraintVertical_bias="0.02"
        app:hintEnabled="false"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:ems="16"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_InputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_InputEmail"
        app:layout_constraintVertical_bias="0.02"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:ems="16"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="Forgot Password?"
        android:textColor="@color/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_InputPassword"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/botton_color"
        android:padding="15dp"
        android:text="@string/sing_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_OR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OR"
        android:textColor="@color/Grey_body"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignIn"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivApple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_OR"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"/>

    <ImageView
        android:id="@+id/ivApple"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="55dp"
        android:src="@drawable/ic_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivGoogle"
        app:layout_constraintTop_toBottomOf="@+id/tv_OR"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/Grey_body"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tvSignUP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/sing_up"
        android:textColor="@color/forgot_password"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/ivGoogle"
        app:layout_constraintVertical_bias="0.8" />




</androidx.constraintlayout.widget.ConstraintLayout>